src/test/deca/context/invalid/class/7_mauvaisParam.deca
/* Description:
    Tester l'appel d'une méthode avec un mauvais paramétre.

    Historique:
      cree le 20/01/2020
    Sortie attendue:

*/

class Test{
    int a;
    int mult(int b){
        return  a*b;
    }
}

{
	Test classe = new Test();
  int b = classe.mult("test");
}
